[package]
name = "splayfs"
version = "0.1.0"
authors = ["jmcph4 <jmcph4.github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "libsplayfs"
path = "src/lib.rs"

[[bin]]
name = "splayfs"
path = "src/main.rs"
